<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="stepTwoViewModel" type="com.prishanm.biometrixpoc.viewModel.CameraStepTwoViewModel"/>
        <variable name="isImageCaptured" type="boolean" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/step_2"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="12dp"
                app:visibleGone="@{!isImageCaptured}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_margin="12dp"
                    android:text="@string/following_step_one"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_margin="12dp"
                    android:text="@string/capture_selfie"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_margin="12dp"
                    android:text="@string/validate_image"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_margin="12dp"
                    android:text="@string/proceed_step_3"/>


            </LinearLayout>

            <ImageView
                android:id="@+id/imgCapture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:visibleGone="@{isImageCaptured}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnCapture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_camera"
                android:text="Capture" />

            <ImageButton
                android:id="@+id/btnCheck"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_checked"
                android:text="Capture"/>

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_next"
                android:text="Capture"/>
        </LinearLayout>

    </LinearLayout>

</layout>
